--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
